# langrade

./: .env.example  .gitignore  MANIFEST.in  README.md  __init__.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  docs.yml  release.yml  version-bump.yml
application/: document_grader.py
docs/: advanced_usage.md  api.md  configuration.md  contributing.md  faq.md  index.md  installation.md  troubleshooting.md  usage.md
domain/: models.py
infrastructure/document_retriever/: documentdb_retriever.py  web_retriever.py
infrastructure/document_retriever/parsers/: csv_parser.py  document_parser.py  excel_parser.py  pdf_parser.py  word_parser.py
langrade/: __init__.py  constants.py  criteria.py  embeddings.py  fatory.py  grader.py  providers.py  retriever.py  utils.py
langrade/application/: document_grader.py
langrade/config/: settings.py
langrade/domain/: models.py
langrade/infrastructure/document_retriever/: __init__.py  base.py  documentdb_retriever.py  recursive_web_retriever.py  web_retriever.py
langrade/infrastructure/document_retriever/parsers/: __init__.py  base.py  csv_parser.py  document_parser.py  excel_parser.py  pdf_parser.py  word_parser.py
langrade/infrastructure/llm/: base.py  claude_engine.py  factory.py  gemini_engine.py  openai_engine.py
scripts/: run_tests.py  validate_versions.py
tests/: conftest.py  run_tests.py  test_constants.py  test_criteria.py  test_document_grader.py  test_document_retriever.py  test_grader.py  test_providers.py  test_retriever.py  utils.py
tests/integration/: test_document_retriever.py
