[tool.poetry]
name = "langrade"
version = "0.1.1"
description = "A library for grading document relevance using LLMs"
authors = ["nisaji <nisaji27@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.2.6"
langchain-community = "^0.2.6"
langchain-openai = "^0.1.14"
pymongo = "^4.8.0"
langchain-core = "^0.2.11"
python-dotenv = "^1.0.1"
openpyxl = "^3.1.5"
pypdf2 = "^3.0.1"
python-docx = "^1.1.2"
beautifulsoup4 = "^4.12.3"
numpy = "^1.22.5"
chromadb = "^0.5.3,<0.6.0"

google-generativeai = "^0.7.1"
anthropic = "0.2.8"
[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
mypy = "^1.10.1"
isort = "^5.13.2"
setuptools = "^70.2.0"
pytest = "^6.2"
pytest-cov = "^2.12"
types-setuptools = "^70.2.0.20240704"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C", "N"]
ignore = ["E501", "W503"]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["docx.*", "openpyxl.*"]
ignore_missing_imports = true

[tool.poetry.scripts]
test = "scripts.run_tests:main"
