[tool.poetry]
name = "langrade"
version = "0.1.5"
description = "A library for grading documents using LLMs"
authors = ["nisaji <nisaji27@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "langrade"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain = ">=0.2.6,<0.3.0"
langchain-community = ">=0.2.6,<0.3.0"
langchain-openai = ">=0.1.14,<0.2.0"
langchain-core = ">=0.2.11,<0.3.0"
python-dotenv = ">=1.0.0,<2.0.0"
beautifulsoup4 = ">=4.12.0,<5.0.0"
langchain-anthropic = ">=0.1.20,<0.2.0"
langchain-google-genai = ">=1.0.7,<2.0.0"
numpy = ">=1.24.0,<2.0.0"
vertexai = ">=1.71.1,<2.0.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.5.0,<0.6.0"
mypy = ">=1.10.1,<2.0.0"
isort = ">=5.13.2,<6.0.0"
pytest = ">=7.0.0,<8.0.0"
pytest-asyncio = ">=0.21.0,<0.22.0"
pytest-cov = ">=4.1.0,<5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C", "N", "S"]
ignore = ["E501", "W503"]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.poetry.scripts]
test = "scripts.run_tests:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=langrade"
